--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -18,6 +18,7 @@
         <link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
         <link href="../css/default.css" rel="stylesheet" />
         <link href="../css/jquery.steps.css" rel="stylesheet" />
+        <link href="../js/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css" rel="stylesheet" media="screen" />
     </h:head>
     <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
     <h:outputScript library="js" name="locationMap.js" target="head" />
@@ -113,4 +114,13 @@
     <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
     <script src="../js/jquery.steps.js"></script>
     <script src="../js/jquery.validate.min.js"></script>
+    <script src="../js/fancybox/jquery.fancybox.js?v=2.1.5" type="text/javascript"></script>
+    <script type="text/javascript">
+		$(window).load(function() {
+			$(".fancybox").fancybox({
+				"width" : "85%",
+				"height" : "70%"
+			});
+		});
+	</script>
 </html>
