--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -67,6 +67,7 @@
 		</div>
 	</div>
 	<ui:include src="footer.xhtml" />
+	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="bootstrap/js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
