--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -19,8 +19,9 @@
 					</div>
 					<br />
 					<h3>Universidad Central</h3>
-					<br /> Sede Centro: calle 21 n.º 4-40 <br /> Sede Norte: calle 75
-					n.º 16-03 <br /> Semillero de Modelado, Simulación y Desarrollo <br />
+					<br /> Sede Centro: calle 21 n.º 4-40 <br /> Sede Norte: calle
+					75 n.º 16-03 <br /> Semillero de Modelado, Simulación y
+					Desarrollo <br />
 					<h3>Universidad Jorger Tadeo Lozano</h3>
 					<br /> Cra. 4 #22-61, Bogotá, Cundinamarca <br /> 2017 Todos los
 					derechos reservados <br /> <br /> email: <a
@@ -84,53 +85,38 @@
 		</div>
 	</div>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="row" style="padding-top: 5px;">
-				<div class="col-md-2">
-					<img class="img-responsive" src="images/logo_central.gif" alt=""
-						style="max-height: 35px;" />
-				</div>
-				<div class="col-md-2 col-md-offset-8">
-					<img class="img-responsive" src="images/logo_utadeo.gif" alt=""
-						style="max-height: 35px;" />
-				</div>
-			</div>
-		</div>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"
+		style="background-color: #ffffff00; border-color: #ffffff00">
+		<img class="img-responsive" src="images/banner/abeja.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/avispa.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/hormiga.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/insect.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/mariposa.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/avispa.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/hormiga.jpg" alt=""
+			style="float: left; width: 12.5%" /> <img class="img-responsive"
+			src="images/banner/mosca.jpg" alt=""
+			style="float: left; width: 12.5%" />
+		<div style="text-align: center;">COLECCIÓN ENTOMOLÓGICA
+			VIRTUAL</div>
 	</nav>
-	<nav class="navbar" role="navigation" style="padding-top: 50px;">
-		<div class="container" style="text-align: center;">
-			<h1 class="bs-docs-featurette-title">COLECCIÓN ENTOMOLÓGICA
-				VIRTUAL</h1>
-			<hr />
-			<p>Colección Entomológica del Centro de Biosistemas de la
-				Universidad Jorge Tadeo Lozano.</p>
-		</div>
-	</nav>
+
+	<div class="row" style="text-align: center; padding-top: 60px">
+		<hr />
+		<h3>Colección Entomológica del Centro de Biosistemas de la
+			Universidad Jorge Tadeo Lozano.</h3>
+		<hr />
+	</div>
 
 	<div class="row">
 		<div class="col-md-12">
-			<img class="img-responsive" src="images/banner/abeja.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/avispa.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/hormiga.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/insect.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/mariposa.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/avispa.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/hormiga.jpg" alt=""
-				style="float: left; width: 12.5%" /> <img class="img-responsive"
-				src="images/banner/mosca.jpg" alt=""
-				style="float: left; width: 12.5%" />
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<nav class="navbar navbar-default">
+			<nav class="navbar navbar-default" style="min-height: 0px;">
 				<div class="container-fluid">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed"
