--- a/src/main/webapp/admin/collections.xhtml
+++ b/src/main/webapp/admin/collections.xhtml
@@ -145,6 +145,7 @@
 							<h4 class="modal-title">Detalle de Especímenes</h4>
 						</div>
 						<div class="modal-body">
+							<p>*Solo se muestran los primeros 6 especímenes</p>
 							<div class="form-group">
 								<ui:repeat var="specimen"
 									value="#{collectionBean.collectionSpecimens}">
