--- a/src/main/webapp/admin/taxonomy.xhtml
+++ b/src/main/webapp/admin/taxonomy.xhtml
@@ -182,6 +182,7 @@
 								Especímenes</h4>
 						</div>
 						<div class="modal-body">
+							<p>*Solo se muestran los primeros 6 especímenes</p>
 							<div class="form-group">
 								<ui:repeat var="specimen"
 									value="#{taxonomyBean.taxonomySpecimens}">
