--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -19,9 +19,8 @@
 					</div>
 					<br />
 					<h3>Universidad Central</h3>
-					<br /> Sede Centro: calle 21 n.º 4-40 <br /> Sede Norte: calle
-					75 n.º 16-03 <br /> Semillero de Modelado, Simulación y
-					Desarrollo <br />
+					<br /> Sede Centro: calle 21 n.º 4-40 <br /> Sede Norte: calle 75
+					n.º 16-03 <br /> Semillero de Modelado, Simulación y Desarrollo <br />
 					<h3>Universidad Jorger Tadeo Lozano</h3>
 					<br /> Cra. 4 #22-61, Bogotá, Cundinamarca <br /> 2017 Todos los
 					derechos reservados <br /> <br /> email: <a
@@ -87,27 +86,10 @@
 
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"
 		style="background-color: #ffffff00; border-color: #ffffff00">
-		<img class="img-responsive" src="images/banner/abeja.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/avispa.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/hormiga.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/insect.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/mariposa.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/avispa.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/hormiga.jpg" alt=""
-			style="float: left; width: 12.5%" /> <img class="img-responsive"
-			src="images/banner/mosca.jpg" alt=""
-			style="float: left; width: 12.5%" />
-		<div style="text-align: center;">COLECCIÓN ENTOMOLÓGICA
-			VIRTUAL</div>
+		<div class="main-tittle"></div>
 	</nav>
 
-	<div class="row" style="text-align: center; padding-top: 60px">
+	<div class="row" style="text-align: center; padding-top: 90px">
 		<hr />
 		<h3>Colección Entomológica del Centro de Biosistemas de la
 			Universidad Jorge Tadeo Lozano.</h3>
