--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -26,8 +26,11 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-md-6">
-								<img class="img-responsive" src="images/fondo_light.jpg" alt="" />
+								<h:outputLink value="FamiliesCollection.xhtml">
+									<img class="img-responsive" src="images/fondo_light.jpg" alt="" />
+								</h:outputLink>
 							</div>
+							<br />
 							<div class="col-md-6">La Universidad Central, lleva a otros
 								niveles la presentación de la colecciones biológicas. En este
 								proyecto nos dedicamos a llevar a la colección entomológica del
@@ -39,6 +42,8 @@
 					<div class="list-group">
 						<h:outputLink value="FamiliesCollection.xhtml"
 							class="list-group-item">Colección Entomológica</h:outputLink>
+						<h:outputLink value="FamiliesCollection.xhtml"
+							class="list-group-item">Arbol Taxonómico</h:outputLink>
 						<a href="http://www.ucentral.edu.co" class="list-group-item">Universidad
 							Central</a> <a
 							href="http://www.utadeo.edu.co/es/micrositio/centro-de-bio-sistemas"
@@ -50,16 +55,12 @@
 			</div>
 			<div class="col-md-4">
 				<div class="panel panel-default">
-					<div class="panel-heading">Noticias</div>
+					<div class="panel-heading">Noticias y Eventos</div>
 					<div class="panel-body">
 						El Centro Entomológico Virtual está disponible
 						<hr />
 						Este al tanto de las nuevos ejemplares que son añadidos.
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading">Eventos</div>
-					<div class="panel-body">
+						<hr />
 						<img class="img-responsive" src="images/banner/avispa.jpg" alt="" />
 					</div>
 				</div>
