--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -244,6 +244,7 @@
 							Especímenes</h4>
 					</div>
 					<div class="modal-body">
+						<p>*Solo se muestran los primeros 6 especímenes</p>
 						<div class="form-group">
 							<ui:repeat var="specimen" value="#{authorBean.authorSpecimens}">
 								<div class="row">
