--- a/src/main/webapp/specimenDetail.xhtml
+++ b/src/main/webapp/specimenDetail.xhtml
@@ -25,6 +25,7 @@
 				width="100%">
 				<f:param name="idSpecimen"
 					value="#{specimenContentBean.specimenDetail}" />
+				<f:param name="t" value="#{specimenContentBean.timeStamp}" />
 			</p:graphicImage>
 			<label class="titulo">UBICACIÓN GEOGRÁFICA</label>
 			<div id="map" style="width: 100%; height: 250px;"></div>
