--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -108,13 +108,11 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">HPCLab</a>
+						<a class="navbar-brand" href="#">HPCLab - High Performance Computing Lab</a>
 					</div>
 					<div class="collapse navbar-collapse"
 						id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="FamiliesCollection.xhtml">Colección
-									Entomólogica</a></li>
 							<li><a href="#contact" role="button" data-toggle="modal">Contacto</a></li>
 							<li><a href="#about" role="button" data-toggle="modal">Acerca</a></li>
 							<li><a href="admin/login.xhtml">Ingreso</a></li>
