--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
-				<div class="panel panel-default">
+				<div class="panel panel-default main-panel">
 					<div class="panel-heading">Colección Entomológica Virtual</div>
 					<div class="panel-body">
 						<div class="row">
@@ -48,13 +48,13 @@
 							Central</a> <a
 							href="http://www.utadeo.edu.co/es/micrositio/centro-de-bio-sistemas"
 							class="list-group-item">UJTL Centro de Biosistemas</a> <a
-							href="http://commons.com.co/index.php/" class="list-group-item">Grupo
-							Commons U. Central</a>
+							href="http://hpclab.ucentral.edu.co/" class="list-group-item">High
+							Performance Computing Lab - U. Central</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="panel panel-default">
+				<div class="panel panel-default main-panel">
 					<div class="panel-heading">Noticias y Eventos</div>
 					<div class="panel-body">
 						El Centro Entomológico Virtual está disponible
