--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -1,126 +1,139 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>CEV :: Administración</title>
-        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/png" href="../images/utils/bug-silhouette-dark.png" />
-        <link href="../bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
-        <link href="light-bootstrap/css/animate.min.css" rel="stylesheet"/>
-        <link href="light-bootstrap/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
-        <link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
-        <link href="../css/default.css" rel="stylesheet" />
-        <link href="../css/jquery.steps.css" rel="stylesheet" />
-        <link href="../js/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css" rel="stylesheet" media="screen" />
-    </h:head>
-    <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
-    <h:outputScript library="js" name="locationMap.js" target="head" />
-    <h:body>
-        <div id="loading" class="oculto topcorner">
-            <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-            <p>Procesando...</p>
-        </div>
-        <p:ajaxStatus onstart="$('#loading').removeClass('oculto')" onsuccess="$('#loading').addClass('oculto')" />
-        <p:growl id="growl" showDetail="true"/>
-        <div class="wrapper">
-            <h:form id="menuForm">
-                <div class="sidebar" data-color="green" data-image="../images/sidebar-bee.png">
-                    <div class="sidebar-wrapper">
-                        <div class="logo">
-                            <h:outputLink value="index.xhtml" styleClass="simple-text">
-                                <img src="../images/utils/bug-silhouette-light.png" class="logo-dashboard img-responsive"/>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+<h:head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<title>CEV :: Administración</title>
+	<meta
+		content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+		name='viewport' />
+	<meta name="viewport" content="width=device-width" />
+	<link rel="icon" type="image/png"
+		href="../images/utils/bug-silhouette-dark.png" />
+	<link href="../bootstrap/css/bootstrap.css" type="text/css"
+		rel="stylesheet" />
+	<link href="light-bootstrap/css/animate.min.css" rel="stylesheet" />
+	<link href="light-bootstrap/css/light-bootstrap-dashboard.css"
+		rel="stylesheet" />
+	<link href="light-bootstrap/css/pe-icon-7-stroke.css" rel="stylesheet" />
+	<link href="../css/default.css" rel="stylesheet" />
+	<link href="../css/jquery.steps.css" rel="stylesheet" />
+	<link href="../js/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css"
+		rel="stylesheet" media="screen" />
+</h:head>
+<h:outputScript library="primefaces" name="jquery/jquery.js"
+	target="head" />
+<h:outputScript library="js" name="locationMap.js" target="head" />
+<h:body>
+	<div id="loading" class="oculto topcorner">
+		<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+		<p>Procesando...</p>
+	</div>
+	<p:ajaxStatus onstart="$('#loading').removeClass('oculto')"
+		onsuccess="$('#loading').addClass('oculto')" />
+	<p:growl id="growl" showDetail="true" />
+	<div class="wrapper">
+		<h:form id="menuForm">
+			<div class="sidebar" data-color="green"
+				data-image="../images/sidebar-bee.png">
+				<div class="sidebar-wrapper">
+					<div class="logo">
+						<h:outputLink value="index.xhtml" styleClass="simple-text">
+							<img src="../images/utils/bug-silhouette-light.png"
+								class="logo-dashboard img-responsive" />
                                 COLECCIÓN ENTOMOLÓGICA VIRTUAL
                             </h:outputLink>
-                        </div>
-                        <ul class="nav">
-                            <ui:repeat id="userMenu" value="#{loginBean.userModules}" var="module">
-                                <li class="#{module.idContainer == null? 'seccion' : ''}">
-                                    <ui:fragment rendered="#{module.modulePage == null}">
-                                        <i class="#{module.moduleIcon}"></i>
-                                        <p>#{module.moduleName}</p>
-                                    </ui:fragment>
-                                    <ui:fragment rendered="#{module.modulePage != null}">
-                                        <h:commandLink value="#{module.moduleName}" title="#{module.moduleDescr}">
-                                            <f:setPropertyActionListener value="#{module.modulePage}" target="#{navigationBean.navigablePage}"/>
-                                            <i class="#{module.moduleIcon}"></i>
-                                        </h:commandLink>
-                                    </ui:fragment>
-                                </li>
-                            </ui:repeat>
-                        </ul>
-                    </div>
-                </div>
-            </h:form>
-            <div class="main-panel">
-                <h:form id="logoutForm">
-                    <nav class="navbar navbar-default navbar-fixed">
-                        <div class="container-fluid">
-                            <div class="navbar-header">
-                                <a class="navbar-brand" href="#">
-                                    <small>Bienvenido, </small><strong>#{loginBean.users.userNames} #{loginBean.users.userLastnames}</strong>
-                                </a>
-                            </div>
-                            <div class="collapse navbar-collapse">
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li>
+					</div>
+					<ul class="nav">
+						<ui:repeat id="userMenu" value="#{loginBean.userModules}"
+							var="module">
+							<li class="#{module.idContainer == null? 'seccion' : ''}"><ui:fragment
+									rendered="#{module.modulePage == null and module.status == 'Activo'}">
+									<i class="#{module.moduleIcon}"></i>
+									<p>#{module.moduleName}</p>
+								</ui:fragment> <ui:fragment
+									rendered="#{module.modulePage != null and module.status == 'Activo'}">
+									<h:commandLink value="#{module.moduleName}"
+										title="#{module.moduleDescr}">
+										<f:setPropertyActionListener value="#{module.modulePage}"
+											target="#{navigationBean.navigablePage}" />
+										<i class="#{module.moduleIcon}"></i>
+									</h:commandLink>
+								</ui:fragment></li>
+						</ui:repeat>
+					</ul>
+				</div>
+			</div>
+		</h:form>
+		<div class="main-panel">
+			<h:form id="logoutForm">
+				<nav class="navbar navbar-default navbar-fixed">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="#"> <small>Bienvenido,
+							</small><strong>#{loginBean.users.userNames}
+									#{loginBean.users.userLastnames}</strong>
+							</a>
+						</div>
+						<div class="collapse navbar-collapse">
+							<ul class="nav navbar-nav navbar-right">
+								<!-- <li>
                                         <a href="">
                                             <i class="pe-7s-user"></i>
                                             <strong>Perfil de Usuario</strong>
                                         </a>
-                                    </li>
-                                    <li>
-                                        <h:commandLink action="#{loginBean.logOut()}">
-                                            <i class="pe-7s-close-circle"></i>
-                                            <strong>Salir de C.E.V</strong>
-                                        </h:commandLink>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                </h:form>
-                <div class="content">
-                    <img src="../images/utils/bug-silhouette-dark.png" class="watermark img-responsive"/>
-                    <div class="container-fluid" style="height: 100%;">
-                        <ui:fragment rendered="#{navigationBean.pageReady}">
-                            <ui:include src="#{navigationBean.navigablePage}" />
-                        </ui:fragment>
-                    </div>
-                </div>
-                <footer class="footer">
-                    <div class="container-fluid">
-                        <nav class="pull-left">
-                            <p class="copyright pull-right">
-                                &#169; 2017 Colección Entomológica Virtual - Universidad Central
-                            </p>
-                        </nav>
-                    </div>
-                </footer>
-            </div>
-        </div>
-    </h:body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBR3PcM4cz5r0TULxJuDBgF2xvLqLE73c"></script>
-    <script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
-    <script src="light-bootstrap/js/chartist.min.js"></script>
-    <script src="light-bootstrap/js/bootstrap-notify.js"></script>
-    <script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
-    <script src="../js/jquery.steps.js"></script>
-    <script src="../js/jquery.validate.min.js"></script>
-    <script src="../js/fancybox/jquery.fancybox.js?v=2.1.5" type="text/javascript"></script>
-    <script type="text/javascript">
-		$(window).load(function() {
-			$(".fancybox").fancybox({
-				"width" : "85%",
-				"height" : "70%"
-			});
+                                    </li>  -->
+								<li><h:commandLink action="#{loginBean.logOut()}">
+										<i class="pe-7s-close-circle"></i>
+										<strong>Salir de C.E.V</strong>
+									</h:commandLink></li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</h:form>
+			<div class="content">
+				<img src="../images/utils/bug-silhouette-dark.png"
+					class="watermark img-responsive" />
+				<div class="container-fluid" style="height: 100%;">
+					<ui:fragment rendered="#{navigationBean.pageReady}">
+						<ui:include src="#{navigationBean.navigablePage}" />
+					</ui:fragment>
+				</div>
+			</div>
+			<footer class="footer">
+				<div class="container-fluid">
+					<nav class="pull-left">
+						<p class="copyright pull-right">&#169; 2017 Colección
+							Entomológica Virtual - Universidad Central</p>
+					</nav>
+				</div>
+			</footer>
+		</div>
+	</div>
+</h:body>
+<script
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBR3PcM4cz5r0TULxJuDBgF2xvLqLE73c"></script>
+<script src="light-bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="light-bootstrap/js/bootstrap-checkbox-radio-switch.js"></script>
+<script src="light-bootstrap/js/chartist.min.js"></script>
+<script src="light-bootstrap/js/bootstrap-notify.js"></script>
+<script src="light-bootstrap/js/light-bootstrap-dashboard.js"></script>
+<script src="../js/jquery.steps.js"></script>
+<script src="../js/jquery.validate.min.js"></script>
+<script src="../js/fancybox/jquery.fancybox.js?v=2.1.5"
+	type="text/javascript"></script>
+<script type="text/javascript">
+	$(window).load(function() {
+		$(".fancybox").fancybox({
+			"width" : "85%",
+			"height" : "70%"
 		});
-	</script>
+	});
+</script>
 </html>
