--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -1,15 +1,27 @@
 <div class="container">
 	<hr />
 	<footer>
+		<div class="row" style="align-content: center">
+			<div class="col-md-4 col-md-offset-1">
+				<img class="img-responsive" src="images/utils/logo_ucentral.jpg"/>
+			</div>
+			<div class="col-md-2">
+				<img class="img-responsive" src="images/utils/logo_colciencias.jpg"/>
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive" src="images/utils/logo_utadeo.jpg"/>
+			</div>
+		</div>
+		<hr />
 		<div class="row">
 			<div class="col-lg-12">
 				<p style="text-align: center;">
 					Proyecto Colección Entomológica Virtual. Todos los derechos
 					reservados. | Fotos de <a href="http://www.google.com/images">GOOGLE</a>
-					| Diseño por <a href="#" rel="nofollow">smotavitam</a>.<br /> <span
-						class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span>
+					| Diseño por <a href="#" rel="nofollow">smotavitam</a>.<br /> 
 				</p>
 			</div>
 		</div>
+		<hr />
 	</footer>
 </div>
