Ajustes de Presentación - Tamaño de nodos del arbol

--- a/src/main/webapp/admin/collections.xhtml
+++ b/src/main/webapp/admin/collections.xhtml
@@ -202,7 +202,7 @@
 				<p:menuitem value="Ver detalle de Especies"
 					update="detailColModalForm"
 					actionListener="#{collectionBean.setDatafromNode('detail')}"
-					icon="fa fa-folder-open"
+					icon="fa fa-file-text-o"
 					oncomplete="$('#detailColModal').modal({backdrop: false})" />
 
 				<p:menuitem value="Borrar" update="catalogForm"
@@ -214,7 +214,7 @@
 				<p:menuitem value="Ver detalle de Especies"
 					update="detailColModalForm"
 					actionListener="#{collectionBean.setDatafromNode('detail')}"
-					icon="fa fa-folder-open"
+					icon="fa fa-file-text-o"
 					oncomplete="$('#detailColModal').modal({backdrop: false})" />
 			</p:contextMenu>
 		</h:form>
