--- a/src/main/webapp/admin/location.xhtml
+++ b/src/main/webapp/admin/location.xhtml
@@ -342,7 +342,7 @@
 					<p:menuitem value="Ver detalle de Especies"
 						update="detailModalForm"
 						actionListener="#{locationBean.setDatafromNode('detail')}"
-						icon="fa fa-folder-open"
+						icon="fa fa-file-text-o"
 						oncomplete="$('#detailModal').modal({backdrop: false})" />
 
 					<p:menuitem value="Borrar"
