--- a/src/main/webapp/admin/taxonomy.xhtml
+++ b/src/main/webapp/admin/taxonomy.xhtml
@@ -239,7 +239,7 @@
 				<p:menuitem value="Ver detalle de Especies"
 					update="detailTaxModalForm"
 					actionListener="#{taxonomyBean.setDatafromNode('detail')}"
-					icon="fa fa-folder-open"
+					icon="fa fa-file-text-o"
 					oncomplete="$('#detailTaxModal').modal({backdrop: false})" />
 
 				<p:menuitem value="Borrar"
