--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -42,8 +42,7 @@
 					<div class="list-group">
 						<h:outputLink value="FamiliesCollection.xhtml"
 							class="list-group-item">Colección Entomológica</h:outputLink>
-						<h:outputLink value="FamiliesCollection.xhtml"
-							class="list-group-item">Arbol Taxonómico</h:outputLink>
+						<h:outputLink value="taxTree.xhtml" class="list-group-item">Arbol Taxonómico</h:outputLink>
 						<a href="http://www.ucentral.edu.co" class="list-group-item">Universidad
 							Central</a> <a
 							href="http://www.utadeo.edu.co/es/micrositio/centro-de-bio-sistemas"
