--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -36,9 +36,20 @@
 	<ui:include src="header.xhtml" />
 	<div class="container">
 		<div class="row">
-			<h:outputLink class="btn btn-default btn-lg btn-action"
-				value="FamiliesCollection.xhtml">Regresar</h:outputLink>
+			<ol class="breadcrumb">
+				<li><h:outputLink value="index.xhtml">Inicio</h:outputLink></li>
+				<li><h:outputLink value="FamiliesCollection.xhtml">Colección Entomológica</h:outputLink></li>
+				<li class="active">Familia #{specimenContentBean.familyName}</li>
+			</ol>
 		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+			eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+			ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+			aliquip ex ea commodo consequat. Duis aute irure dolor in
+			reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+			culpa qui officia deserunt mollit anim id est laborum.</p>
+		<hr />
 		<div class="row">
 			<div id="box" class="box">
 				<div id="portfolio" class="container">
