--- a/src/main/webapp/FamiliesCollection.xhtml
+++ b/src/main/webapp/FamiliesCollection.xhtml
@@ -36,9 +36,18 @@
 	<ui:include src="header.xhtml" />
 	<div class="container">
 		<div class="row">
-			<h:outputLink class="btn btn-default btn-lg btn-action"
-				value="index.xhtml">Regresar</h:outputLink>
+			<ol class="breadcrumb">
+				<li><h:outputLink value="index.xhtml">Inicio</h:outputLink></li>
+				<li class="active">Colección Entomológica</li>
+			</ol>
 		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+			eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+			ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+			aliquip ex ea commodo consequat. Duis aute irure dolor in
+			reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+			culpa qui officia deserunt mollit anim id est laborum.</p>
 		<hr />
 		<h:outputText value="&lt;div class=&quot;row&quot;&gt;" escape="false" />
 		<h:form id="formCollection">
@@ -48,21 +57,33 @@
 					escape="false" rendered="#{stat.index % 3 == 0}" />
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<p:graphicImage value="#{specimenContentBean.getFamilyThumb()}">
+						<p:graphicImage value="#{specimenContentBean.getFamilyThumb()}"
+							class="familyImage">
 							<f:param name="idTaxonomy" value="#{fam.idTaxonomy}" />
-							<f:param name="t" value="#{specimenContentBean.timeStamp}"/>
+							<f:param name="t" value="#{specimenContentBean.timeStamp}" />
 						</p:graphicImage>
 						<div class="caption">
-							<h3>#{fam.taxonomyName}</h3>
-							<p>
+							<h2 class="familyTittle">#{fam.taxonomyName}</h2>
+							<div class="btn-group btn-group-justified" role="group">
 								<p:commandLink id="viewSpecimenButton"
 									action="#{specimenContentBean.loadFamilySpecimens}"
-									class="btn btn-default btn-lg btn-action" ajax="false"
-									title="Ver especímenes de #{fam.taxonomyName}">
+									class="btn btn-default btn-lg btn-action locateInTree"
+									ajax="false">
 									<f:param name="idTaxonomy" value="#{fam.idTaxonomy}" />
-								Ver Ejemplares
-							</p:commandLink>
-							</p>
+									<span class="locateInTreeText">Ver especímenes de
+										#{fam.taxonomyName}</span>
+									<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+								</p:commandLink>
+								<p:commandLink id="locateInTree"
+									action="#{specimenContentBean.loadFamilySpecimens}"
+									class="btn btn-default btn-lg btn-action locateInTree"
+									ajax="false">
+									<f:param name="idTaxonomy" value="#{fam.idTaxonomy}" />
+									<span class="locateInTreeText">Ubicar esta familia en
+										árbol</span>
+									<span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+								</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
