--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -3,13 +3,16 @@
 	<footer>
 		<div class="row" style="align-content: center">
 			<div class="col-md-4 col-md-offset-1">
-				<img class="img-responsive" src="images/utils/logo_ucentral.jpg"/>
+				<img class="img-responsive" style="margin: auto;"
+					src="images/utils/logo_ucentral.jpg" />
 			</div>
 			<div class="col-md-2">
-				<img class="img-responsive" src="images/utils/logo_colciencias.jpg"/>
+				<img class="img-responsive" style="margin: auto;"
+					src="images/utils/logo_colciencias.jpg" />
 			</div>
 			<div class="col-md-4">
-				<img class="img-responsive" src="images/utils/logo_utadeo.jpg"/>
+				<img class="img-responsive" style="margin: auto;"
+					src="images/utils/logo_utadeo.jpg" />
 			</div>
 		</div>
 		<hr />
@@ -18,7 +21,7 @@
 				<p style="text-align: center;">
 					Proyecto Colección Entomológica Virtual. Todos los derechos
 					reservados. | Fotos de <a href="http://www.google.com/images">GOOGLE</a>
-					| Diseño por <a href="#" rel="nofollow">smotavitam</a>.<br /> 
+					| Diseño por <a href="#" rel="nofollow">smotavitam</a>.<br />
 				</p>
 			</div>
 		</div>
